// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifGrid/> should render 1`] = `
<Fragment>
  <h3
    className=" animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <p
    className=" animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test <GifGrid/> should show items when load images useFetchGifs 1`] = `
<Fragment>
  <h3
    className=" animate__animated animate__fadeIn"
  >
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="adfadsf"
      key="adfadsf"
      title="test"
      url="test.com"
    />
  </div>
</Fragment>
`;
